kube-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
  labels:
    app: prod-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
         app: prod-deploy
    spec:
      containers:
       - name: prod-deploy
         image: eu.gcr.io/microservices-2020/istio-service:v1
         ports:
          - containerPort: 8080 
         readinessProbe:
            httpGet:
              path: /getMessage
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
                 
---
apiVersion: v1
kind: Service
metadata:
  name: Production-Service
  labels:
    app: prod-deployment
spec:
  selector:
    app: prod-deployment
  ports:
   - port: 8080
     targetPort: 8080
  type: LoadBalancer
